# busmanager_usb_manager

./: bundle.json  usbmgr.gni
frameworks/dialog/dialog_ui/AppScope/: app.json
frameworks/ets/taihe/usb_manager/: BUILD.gn
frameworks/ets/taihe/usb_manager/src/: ohos.usbManager.impl.cpp  ohos.usbManager.serial.impl.cpp
interfaces/innerkits/: BUILD.gn  IUsbServer.idl  UsbServerTypes.idl
interfaces/innerkits/native/include/: accessory_death_monitor.h  device_death_monitor.h  usb_interface_type.h  usb_srv_client.h
interfaces/innerkits/native/src/: usb_interface_type.cpp  usb_srv_client.cpp
interfaces/kits/js/napi/: BUILD.gn
interfaces/kits/js/napi/include/: serial_async_context.h  (+1 more)
services/: BUILD.gn
services/native/include/: usb_descriptor_parser.h  usb_device_manager.h  usb_host_manager.h  usb_service.h  usbd_type.h
services/native/src/: serial_manager.cpp  usb_descriptor_parser.cpp  usb_device_manager.cpp  usb_function_switch_window.cpp  usb_host_manager.cpp  usb_right_manager.cpp  usb_service.cpp
services/zidl/include/: usb_service_ipc_interface_code.h
test/fuzztest/: BUILD.gn
test/fuzztest/usbmgrclearhalt_fuzzer/: usbmgrclearhalt_fuzzer.cpp
test/fuzztest/usbmgrparseconfigdescriptors_fuzzer/: project.xml  usbmgrparseconfigdescriptors_fuzzer.cpp  usbmgrparseconfigdescriptors_fuzzer.h
test/fuzztest/usbmgrresetdevice_fuzzer/: usbmgrresetdevice_fuzzer.cpp
test/native/js_unittest/: DateAndTimeUtil.js
test/native/js_unittest/usb_manager_js_test/: UsbApiParamExceJsunit.test.js  UsbCoreJsunit.test.js
test/native/mock/include/: usb_port_manager_mock_test.h  usb_right_manager_mock_test.h
test/native/mock/src/: usb_core_mock_test.cpp  usb_port_manager_mock_test.cpp  usb_right_manager_mock_test.cpp
test/native/service_unittest/: BUILD.gn
test/native/service_unittest/include/: usb_host_manager_extended_test.h
test/native/service_unittest/src/: usb_accessory_manager_test.cpp  usb_connection_notifier_test.cpp  usb_descriptor_parser_test.cpp  usb_device_model_test.cpp  usb_function_switch_window_test.cpp  usb_host_manager_boundary_test.cpp  usb_host_manager_edm_test.cpp  usb_host_manager_extended_test.cpp  usb_host_manager_hotplug_test.cpp  usb_manage_interface_test.cpp  usb_port_manager_test.cpp  usb_right_database_test.cpp  usb_right_manager_concurrent_test.cpp  usb_right_manager_error_test.cpp  usb_right_manager_expiry_test.cpp  usb_security_report_test.cpp  usb_service_host_test.cpp  usb_service_test.cpp
test/native/unittest/scsi_test/: scsi_constants.h  usb_mass_storage_factory.cpp  usb_mass_storage_factory.h  usb_mass_storage_impl.cpp  usb_mass_storage_interface.h  usb_scsi_command_test.cpp  usb_scsi_command_test.h  usb_scsi_inquiry_test.cpp
test/native/unittest/usb_standard_ets/: UsbApiDeprecatedAddEtsTest.test.ets  UsbSceneEtsTest.test.ets  UsbSystemApiNormalJsTest.test.ets
tools/ohos-usbManager/: BUILD.gn  README.md  config.json  ohos-usbManager.json
tools/ohos-usbManager/docs/: README.md
tools/ohos-usbManager/src/: usb_cli.cpp  usb_cli_serialization.cpp  usb_cli_serialization.h
tools/ohos-usbManager/tests/: BUILD.gn  usb_cli_mock_test.cpp  usb_cli_serialization_test.cpp
utils/native/include/: usb_api_metrics.h  usb_settings_datashare.h
utils/native/src/: struct_parcel.cpp  usb_api_metrics.cpp  usb_settings_datashare.cpp
(+50 files in other folders)
